        - Improved track dialog.
K3b now always writes a logfile in $(KDEHOME)/share/apps/k3b/lastlog.log
New device configuration format which solves all issues with removable devices like USB.
Copy CSS encrypted DVDs if libdvdcss is installed.
Libsndfile decoder plugin. This includes support for AIFF audio files.
ffmpeg decoder plugin. This includes support for wma audio files.
Use DAO writing mode for data CDs when overwrite is enabled.
Added option to load the last used settings in addition to the default user settings in every
	action dialog.
Show system device name in case the string representing two devices are equal.
Fixed the docking issues. No floating dock windows anymore. :) I have no idea why I wasn't able to do this 
	before... it was so easy after all.
Plugin based Audio Output system for Audio project "preview".
Dropped id3lib in favor of TagLib (great work Scott :)
When the speed for an on-the-fly audio project is set to "Auto" K3b now determines the max writing speed.
Do not close dialogs after the action is done (for example cd copy)
Directly copy Audio tracks from an Audio CD to an Audio project.
Session management
Made K3b a unique application only allowing one instance.
Improved dcop interface for data projects which allows to add and remove items 
	to and from specific folders in the project.
Conditional audio ripping pattern. Now what does that mean? It means that you can do stuff like:
	"if the track has a genre encoded use it, otherwise use 'misc'" and stuff like that.
New project plugin interface. Example: the audio project cddb plugin is now a project plugin
MusicBrainz support (Query audio file tags over the internet)
K3b now has a "smart" automatic multisession handling in Data projects.
Replaced the system tray by an OSD inspired by the one in amaroK

0.11.10
Support Mp3 files starting with multiple ID3 tags.
Improved ~ handling in the QuickDirSelector.
Save/Load composer fields in audio projects