@@ -19,4 +19,8 @@ if include_FFMPEG
 FFMPEGDIR = ffmpeg
 endif
 
-SUBDIRS = wave $(DECOGGDIR) $(DECMP3DIR) $(DECFLACDIR) $(DECAIFFDIR) $(FFMPEGDIR)
+if include_MPC
+MPCDIR = musepack
+endif
+
+SUBDIRS = wave $(DECOGGDIR) $(DECMP3DIR) $(DECFLACDIR) $(DECAIFFDIR) $(FFMPEGDIR) $(MPCDIR)
