@@ -33,6 +33,7 @@ New device configuration format which solves all issues with removable devices l
 Copy CSS encrypted DVDs if libdvdcss is installed.
 Libsndfile decoder plugin. This includes support for AIFF audio files.
 ffmpeg decoder plugin. This includes support for wma audio files.
+Musepack audio decoder plugin.
 Use DAO writing mode for data CDs when overwrite is enabled.
 Added option to load the last used settings in addition to the default user settings in every
 	action dialog.
